Added 5 test cases